--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,18 +4,19 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
 
 trigger:
+- develop
 - master
 
 pool:
   vmImage: 'ubuntu-latest'
 strategy:
   matrix:
-    Python27:
-      python.version: '2.7'
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
+    # Python27:
+    #   python.version: '2.7'
+    # Python35:
+    #   python.version: '3.5'
+    # Python36:
+    #   python.version: '3.6'
     Python37:
       python.version: '3.7'
 
